# autoracejazzyuqdating

./: .gitignore  CHANGELOG.md  README.md  autorace.launch.py  autorace_manager.py  my_burger.sdf  package.xml  setup.cfg  setup.py
autorace_ai_ws/src/lane_detector/: package.xml  setup.py
autorace_jazzy/: image_projection.py  lane_detection.py
launch/: autorace.launch.py
sdf/: my_burger.sdf
